remove $ from header.js

--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -1,13 +1,10 @@
 $breakpoints: (
     phone: 480px,
     tablet: 768px,
-    desktop: 1280px
+    desktop: 1280px,
     small: 640px,
     medium: 768px,
-    large: 1024px,
-    phone: 480px,
-    tablet: 768px,
-    desktop: 1280px
+    large: 1024px
 );
 
 @function breakpoints($breakpoint) {
