Apply new footer styles

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -5,34 +5,40 @@
     <div class="copyright">
         <ul>
             <li>
+                <a href="/news">News</a>
+            </li>
+            <li>
                 <a href="/license">Licensing</a>
             </li>
             <li>
                 <a href="/tos">Terms of Use</a>
             </li>
             <li>
+                <a href="/accessibility-statement">Accessibility Statement</a>
+            </li>
+            <li>
                 <a href="/contact">Contact</a>
             </li>
         </ul>
 
-        <div>
+        <p>
             Supported by William &amp; Flora Hewlett Foundation,
             Bill &amp; Melinda Gates Foundation, 20 Million Minds
             Foundation, Maxfield Foundation, Open Society Foundations,
             and Rice University.
-        </div>
+        </p>
 
-        <div>
+        <p>
             &copy; 1999-2015, Rice University. Except where otherwise noted,
             content created on this site is licensed under a Creative
             Commons Attribution 4.0 License.
-        </div>
+        </p>
 
-        <div>
+        <p>
             Advanced Placement&reg; and AP&reg; are trademarks registered and/or
             owned by the College Board, which was not involved in the
             production of, and does not endorse, this site.
-        </div>
+        </p>
     </div>
 
     <div class="social">
@@ -53,7 +59,7 @@
                 </a>
             </li>
             <li>
-                <a class="btn btn-focus-yellow btn-social"
+                <a class="btn btn-focus-yellow btn-social linkedin"
                    href="https://www.linkedin.com/shareArticle?
                          mini=true&amp;
                          url={{share.url}}&amp;
