--- a/src/styles/components/social.scss
+++ b/src/styles/components/social.scss
@@ -5,7 +5,7 @@
     background-image: url('/images/social/mail.png');
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 67%;
+    background-size: 70%;
     border-radius: 50%;
     display: inline-block;
     font-size: 0;
@@ -16,22 +16,13 @@
 }
 
 .facebook {
-    background-image: url('/images/social/facebook.png');
-    background-size: 0.9rem 2rem;
+    background-image: url('/images/social/icon-fb.svg');
 }
 
 .twitter {
-    background-image: url('/images/social/twitter.png');
-}
-
-.google {
-    background-image: url('/images/social/google.png');
-    background-position: 0 0.5rem;
-    background-size: 2.4rem 2.4rem;
+    background-image: url('/images/social/icon-tw.svg');
 }
 
 .linkedin {
-    background-image: url('/images/social/linkedin.png');
-    background-position: 50% 45%;
-    background-size: 60%;
+    background-image: url('/images/social/icon-li.svg');
 }
