--- a/src/styles/variables/responsive.scss
+++ b/src/styles/variables/responsive.scss
@@ -4,6 +4,9 @@ $breakpoints: (
     desktop: 1280px
 );
 
+// boxed view 1200px
+$boxed-width: 120rem;
+
 @function breakpoints($breakpoint) {
     @if map-has-key($breakpoints, $breakpoint) {
         @return map-get($breakpoints, $breakpoint);
