--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -12,7 +12,7 @@
           <li class="nav-menu-item"><a href="/login">Login</a></li>
       </ul>
       <span class="logo-wrapper">
-          <a class="logo rice-logo" href="/" aria-label="Rice University"></a>
+          <a class="logo rice-logo" href="http://www.rice.edu/" aria-label="Rice University"></a>
       </span>
     </div>
   </nav>
