Modify form text and fields
The mockup was quite different from the approved design.

--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -18,7 +18,8 @@ fieldset {
         border-spacing: 0.5rem;
         display: table;
 
-        > label {
+        > label,
+        > .form-item {
             display: table-row;
 
             > span,
