--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -1,58 +1,75 @@
 <style scoped>@import url(/app/pages/comp-copy/comp-copy.css);</style>
-<h1>Request a copy of "Principles of Economics"</h1>
+<h1>Request an iBooks Complimentary Copy</h1>
 <div class="comp-copy">
     <div class="book-blurb">
-        <img class="book-cover" />
-        <div class="book-description">
-        </div>
+        <p>
+            All faculty members with a verified faculty account can receive an
+            iBooks comp copy of their book of choice.
+        </p>
+        <p>
+            OpenStax textbooks are free for students in web view and PDF form,
+            and for less than $5 in the iBooks Store.
+        </p>
     </div>
     <div>
         <form>
-            <h2>Comp Copy Request Form</h2>
-            <p>Which comp would you like?</p>
-            <fieldset class="labeled-buttons">
+            <fieldset class="labeled-inputs no-inset">
                 <label>
-                    <input checked="checked" name="book_format" type="radio" value="true" />
-                    Premium iBooks Textbook Comp
+                    <span>Name</span>
+                    <input name="person_name" type="text" required />
                 </label>
                 <label>
-                    <input name="book_format" type="radio" value="false" />
-                    Printed Textbook Comp
+                    <span>Email Address</span>
+                    <input name="person_email" type="email" required />
+                </label>
+                <label>
+                    <span>Phone</span>
+                    <input name="person_phone" type="text" />
+                </label>
+                <label>
+                    <span>Book Requested</span>
+                    <select name="book_title" type="text" required />
+                        <option value="" disabled selected>Select a title</option>
+                        <option>Anatomy and Physiology</option>
+                        <option>Biology</option>
+                        <option>Chemistry</option>
+                        <option>College Physics</option>
+                        <option>Concepts of Biology</option>
+                        <option>Introduction to Sociology 2e</option>
+                        <option>Introductory Statistics</option>
+                        <option>Principles of Economics</option>
+                        <option>Principles of Microeconomics</option>
+                        <option>Principles of Macroeconomics</option>
+                        <option>Psychology</option>
+                        <option>U.S. History</option>
+                    </select>
                 </label>
             </fieldset>
             <fieldset class="labeled-inputs no-inset">
-                <label>
-                    <span>Course Name</span>
-                    <input name="course_name" type="text" required />
-                </label>
-                <label>
-                    <span>Current Book</span>
-                    <input name="book_name" type="text" required />
-                </label>
-            </fieldset>
-            <label>
-                <input name="have_adopted" type="checkbox"
-                value="adopted">
-                I have adopted this OpenStax College book.
-            </label>
-            <fieldset class="labeled-inputs no-inset">
-                <label>
-                    <span>Decision Date</span>
-                    <input name="decision_date" type="date" />
-                </label>
-                <label>
-                    <span>Technology in Use</span>
-                    <input name="technology" type="text" required />
-                </label>
                 <label>
                     <span>Number of students this semester</span>
                     <input name="number_students" type="number" required />
                 </label>
+                <label>
+                    <span>Your school</span>
+                    <input name="school" type="text" required />
+                </label>
+                <label>
+                    <span>Your department</span>
+                    <input name="department" type="text" />
+                </label>
+                <div class="form-item">
+                    <span>Have you adopted an OpenStax textbook?</span>
+                    <label>
+                        <input type="radio" name="have_adopted" value="yes" />
+                        Yes
+                    </label>
+                    <label>
+                        <input type="radio" name="have_adopted" checked value="no" />
+                        No
+                    </label>
+                </div>
             </fieldset>
-            <label>
-                <p>Other Committee Members</p>
-                <textarea cols="50" name="other_members" rows="4"></textarea>
-            </label>
             <div>
                 <input type="submit" value="Submit" role="button" />
             </div>
