--- a/src/app/pages/comp-copy/comp-copy.scss
+++ b/src/app/pages/comp-copy/comp-copy.scss
@@ -1,9 +1,6 @@
 @import 'variables';
 
 .comp-copy {
-    display: flex;
-    flex-flow: row wrap;
-
     > h1 {
         flex: 1 100%;
     }
@@ -13,15 +10,17 @@
         min-width: 15rem;
     }
 
-    > div {
-        flex-grow: 1;
-        margin: 1rem;
-        max-width: 50%;
-    }
-
     form {
         border: thin solid color(neutral-light);
         margin: 1rem;
         padding: 1rem;
+    }
+
+    [type="submit"] {
+        background-color: color(primary);
+        border: 0;
+        color: color(neutral-lightest);
+        font-size: 1.7rem;
+        padding: 1rem 2rem;
     }
 }
