--- a/src/app/pages/adoption/book-info/book-info.hbs
+++ b/src/app/pages/adoption/book-info/book-info.hbs
@@ -1,5 +1,5 @@
 <p>OpenStax College textbook you are using: </p>
-<select name="{{prefix}}[textbook]" required>
+<select name="00NU00000053nzR" required>
     <option value="">Please Select</option>
     <option value="Algebra and Trigonometry">Algebra and Trigonometry</option>
     <option value="Anatomy and Physiology">Anatomy and Physiology</option>
@@ -25,11 +25,11 @@
 <p>How are you using this title?</p>
 <fieldset class="labeled-buttons">
     <label>
-        <input checked="checked" name="{{prefix}}[adoption_status]" type="radio" value="Adopted">
+        <input checked="checked" name="00NU00000055spw" type="radio" value="Fully adopted">
         Fully adopted and using it. The students don't have to pay for a book.
     </label>
     <label>
-        <input name="{{prefix}}[adoption_status]" type="radio" value="Recommending book as adoption">
+        <input name="00NU00000055spw" type="radio" value="Recommending book as an option">
         Recommending the book as an option. The students purchase a different book.
     </label>
 </fieldset>
@@ -39,59 +39,59 @@
         Select at least one
     </legend>
     <label>
-        <input name="{{prefix}}[partner_resources][]" type="checkbox" value="None">
+        <input name="00NU0000005VmTu" type="checkbox" value="None">
         None
     </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Cerego">
+         <input name="00NU0000005VmTu" type="checkbox" value="Cerego">
          Cerego
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Courseweaver">
+         <input name="00NU0000005VmTu" type="checkbox" value="Courseweaver">
          Courseweaver
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Expert TA">
+         <input name="00NU0000005VmTu" type="checkbox" value="Expert TA">
          Expert TA
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Lrnr">
+         <input name="00NU0000005VmTu" type="checkbox" value="Lrnr">
          Lrnr
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Sapling Learning">
+         <input name="00NU0000005VmTu" type="checkbox" value="Sapling Learning">
          Sapling Learning
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="SimBio">
+         <input name="00NU0000005VmTu" type="checkbox" value="SimBio">
          SimBio
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="WebAssign">
+         <input name="00NU0000005VmTu" type="checkbox" value="WebAssign">
          WebAssign
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Wiley Plus">
+         <input name="00NU0000005VmTu" type="checkbox" value="Wiley Plus">
          Wiley Plus
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="XYZ Homework">
+         <input name="00NU0000005VmTu" type="checkbox" value="XYZ Homework">
          XYZ Homework
      </label>
    <label>
-       <input class="other" name="{{prefix}}[partner_resources][]" type="checkbox" value="other">
+       <input class="other" name="other" type="checkbox" value="other">
        Other
-       <input name="{{prefix}}[other]" type="text">
+       <input name="00NU0000005Vls8" type="text">
    </label>
 </fieldset>
 <p>
     Approximately how many students in your classes will be using this book per
     semester?
 </p>
-<input name="{{prefix}}[students_per_semester]" type="number" required />
+<input name="00NU00000052VId" type="number" required />
 <p>
     If there are other faculty in your department who will also be using this
     book, approximately how many students in your department will be using this
     book per semester?
 </p>
-<input name="{{prefix}}[other_faculty_usage_count]" type="number" />
+<input name="00NU00000055sq1" type="number" />
