--- a/src/app/components/quotes/quotes.hbs
+++ b/src/app/components/quotes/quotes.hbs
@@ -1,36 +1,36 @@
 <style scoped>
-    @import url(/app/pages/home/quotes/quotes.css);
+    @import url(/app/components/quotes/quotes.css);
 </style>
 <div class="quotes">
     <div class="quote-bucket right">
-        <img src="/images/home/quotes/juan.jpg" width="175" height="230" />
+        <div class="image juan"></div>
         <div class="quote">
-            <span class="blurb">
+            <blockquote>
                 At first I was like, nope, and now I'm like, yep!<br />
-                <strong>- Juan C.</strong>
-            </span>
+                &mdash; <cite>Juan C.</cite>
+            </blockquote>
             <a class="btn btn-orange" href="#">Read It</a>
         </div>
     </div>
 
     <div class="quote-bucket left">
-        <img src="/images/home/quotes/school.jpg" width="175" height="230" />
+        <div class="image school"></div>
         <div class="quote">
-            <span class="blurb">
+            <blockquote>
                 Here is a place where some cool stuff happened.<br />
                 Check it out.
-            </span>
+            </blockquote>
             <a class="btn btn-orange" href="#">Read It</a>
         </div>
     </div>
 
     <div class="quote-bucket full">
         <div class="quote">
-            <span class="blurb">
+            <blockquote>
                 No picture, no big deal.
                 Talking about how great something is. "It could be a
                 testimonial from a teacher."
-            </span>
+            </blockquote>
             <a class="btn" href="#">Read It</a>
         </div>
     </div>
