--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@ body {
     #main {
         display: flex;
         flex: 1 1 auto;
+        padding-top: 12rem;
 
         > div {
             display: flex;
