Add global styles to boxed view pages.
Add strips HTML to TOC, License, and Accessbility pages.

--- a/src/app/pages/accessibility-statement/accessibility-statement.hbs
+++ b/src/app/pages/accessibility-statement/accessibility-statement.hbs
@@ -1,7 +1,7 @@
 <style scoped>
     @import url(/app/pages/accessibility-statement/accessibility-statement.css);
 </style>
-<div class="accessibility-page">
+<div class="accessibility-page page">
 
     <div class="strips">
         <span></span>
