--- a/src/app/pages/tos/tos.hbs
+++ b/src/app/pages/tos/tos.hbs
@@ -1,8 +1,17 @@
 <style scoped>
     @import url(/app/pages/tos/tos.css);
 </style>
-<div class="tos-page">
-    <main id="maincontent">
+<div class="tos-page page">
+
+    <div class="strips">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <main id="maincontent" class="boxed">
         <h1>Terms of Use</h1>
 
         <p>
