Replace occurrences of faculty with instructor(s)
Per Courtney’s message to me

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -1,7 +1,7 @@
 <h1>OpenStax College Adoption Form</h1>
 <p>
     Future funding from the <a href="/about">generous foundation donors</a> who
-    support our work is based on the number of faculty who adopt and the impact
+    support our work is based on the number of instructors who adopt and the impact
     our resources have on students. Please complete the form below to help us
     demonstrate how OpenStax College textbooks are making education more accessible!
 </p>
@@ -17,7 +17,7 @@
         <!-- This is our organization id -->
         <input type=hidden name="oid" value="00DU0000000Kwch">
     </div>
-    <h2>Faculty/Administrator Contact Information</h2>
+    <h2>Instructor/Administrator Contact Information</h2>
     <fieldset class="labeled-inputs">
         <label>
             <span>First name</span>
@@ -100,7 +100,7 @@
 </fieldset>
 <!-- Doesn't look like Salesforce can store this information
 <p>
-    Do you know of any other faculty using OpenStax College books? If so, would
+    Do you know of any other instructors using OpenStax College books? If so, would
     you be willing to provide their contact information below?
 </p>
 <fieldset class="labeled-inputs">
