--- a/src/app/pages/adoption/book-info/book-info.hbs
+++ b/src/app/pages/adoption/book-info/book-info.hbs
@@ -90,7 +90,7 @@
 </p>
 <input name="00NU00000052VId" type="number" required />
 <p>
-    If there are other faculty in your department who will also be using this
+    If there are other instructors in your department who will also be using this
     book, approximately how many students in your department will be using this
     book per semester?
 </p>
