--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -3,7 +3,7 @@
 <div class="comp-copy">
     <div class="book-blurb">
         <p>
-            All faculty members with a verified faculty account can receive an
+            All instructors with a verified instructor account can receive an
             iBooks comp copy of their book of choice.
         </p>
         <p>
