--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -51,17 +51,17 @@
             <h1>Resources</h1>
             <p>
                 Access doesn't end with the book. OpenStax has compiled additional
-                resources for both faculty and students, from online homework tools and
-                interactive study guides, to faculty-only resources that coincide with
+                resources for both instructors and students, from online homework tools and
+                interactive study guides, to instructor-only resources that coincide with
                 Physics.
             </p>
-            <h2>OpenStax Faculty Resources</h2>
+            <h2>OpenStax Instructor Resources</h2>
             <p>
-                Get started with free resources to support your course. (Verified faculty
+                Get started with free resources to support your course. (Verified instructor
                 account required.)
             </p>
             <div class="resource-row">
-                {{#each bookInfo.facultyResources}}
+                {{#each bookInfo.instructorResources}}
                 <div class="resource-box">
                     <h3>{{title}}</h3>
                     <a href="{{downloadUrl}}"><img src="{{iconUrl}}" />Download</a>
