Fix Openstax colors

--- a/src/app/pages/home/banners/chemistry/chemistry.hbs
+++ b/src/app/pages/home/banners/chemistry/chemistry.hbs
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li>
-                <a class="btn btn-large btn-turqoise explore-all" href="/subjects">
+                <a class="btn btn-large btn-turquoise explore-all" href="/subjects">
                     Explore All Subjects
                 </a>
             </li>
