--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -116,7 +116,7 @@
     }
 
     .now-i-can {
-        background-color: rgba(color(turqoise), 0.85);
+        background-color: rgba(color(turquoise), 0.85);
         color: color(neutral-lightest);
         font-size: 2.4vw;
         font-weight: 600;
