Simplify page fetching process
Removed pagecollection, created pagemodel
Added ® to AP

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -32,7 +32,7 @@
               <li class="nav-menu-item"><a href="/subjects/science">Science</a></li>
               <li class="nav-menu-item"><a href="/subjects/social-sciences">Social Sciences</a></li>
               <li class="nav-menu-item"><a href="/subjects/history">History</a></li>
-              <li class="nav-menu-item"><a href="/subjects/ap">AP</a></li>
+              <li class="nav-menu-item"><a href="/subjects/ap">AP&reg;</a></li>
             </ul>
           </li>
           <li class="nav-menu-item"><a href="/higher-ed">Higher Education</a></li>
