--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,6 +47,10 @@ a {
     display: none;
 }
 
+.no-scroll {
+    overflow: hidden;
+}
+
 #main {
     animation: fadeIn ease-in 1;
     animation-delay: 0.2s;
