--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -4,7 +4,6 @@
 .page-header {
     background-color: color(neutral-lightest);
     position: relative;
-    transition: max-height 0.5s;
     z-index: 1;
 
     &.fixed {
@@ -48,6 +47,10 @@
         display: flex;
         justify-content: flex-end;
         padding-right: 8vw;
+
+        @media (max-width: 890px) {
+            display: none;
+        }
 
         @at-root .collapsed#{&} {
             display: none;
@@ -123,7 +126,6 @@
             flex: 1 1 auto;
             font-size: 1.8rem;
             font-weight: 600;
-            position: relative;
 
             @at-root .collapsed#{&} {
                 font-size: 1.6rem;
@@ -133,6 +135,10 @@
                 &:not(.expand) {
                     display: none;
                 }
+            }
+
+            &:not(.expand) {
+                position: relative;
             }
 
             &.expand {
@@ -322,18 +328,11 @@
         display: none;
         outline: 0;
         padding: 1.5rem 0;
-        position: fixed;
-        transition: opacity 0.2s linear;
+        position: static;
         width: 3rem;
 
-        @at-root .collapsed#{&} {
-            display: block;
-        }
-
         @media (max-width: 890px) {
-            @at-root .transparent#{&} {
-                display: block;
-            }
+            display: block;
         }
 
         &:not(.expanded) {
@@ -342,6 +341,14 @@
                 > span {
                     background-color: color(green);
                 }
+            }
+
+            > span {
+                right: 8vw;
+            }
+
+            > span:nth-child(2) {
+                top: 4rem;
             }
         }
 
@@ -358,67 +365,110 @@
             }
 
             &:nth-child(1) {
-                top: 0.5rem;
+                margin-top: -1rem;
                 z-index: 9;
             }
 
-            &:nth-child(2) {
-                top: 1.5rem;
+            &:nth-child(3) {
+                margin-top: 1rem;
             }
 
-            &:nth-child(3) {
-                top: 2.5rem;
+            > ul {
+                list-style-type: none;
+                padding: 0;
             }
         }
     }
 
-    .sub-menu {
-        background-color: rgba(color(neutral-darkest), 0.5);
+    .menu-wrap {
         height: 0;
-        overflow: hidden;
         position: absolute;
+        top: 8rem;
         right: 0;
-        top: 0;
-        transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        width: 0;
-        z-index: 5;
+        bottom: 0;
+        left: 0;
+        overflow: hidden;
+    }
 
-        @at-root .transparent#{&} {
-            background-color: rgba(color(neutral-darkest), 0.8);
+    .menus {
+        display: none;
+        height: 0;
+        left: -80rem;
+        overflow-y: scroll;
+        position: absolute;
+        text-align: center;
+        top: 2rem;
+        transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        width: 100vw;
+
+        @media (max-width: 890px) {
+            display: block;
         }
 
-        li {
-            display: block;
-            margin-right: -12rem;
-            transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        > .expanded-menu,
+        > .expanded-meta-menu {
+            height: 0;
+            position: relative;
+            width: 0;
+            z-index: 5;
 
-            &:nth-child(1) {
-                transition-delay: 0.05s;
+            .nav-menu-item {
+                display: block;
+
+                a {
+                    color: color(neutral-medium);
+                    display: inline-block;
+                    margin: 1.25rem 0 0.5rem -1rem;
+                    padding: 0.5rem 2rem;
+                    text-shadow: none;
+                }
+            }
+        }
+
+        > .expanded-menu .nav-menu-item {
+            > a {
+                font-size: 2.4rem;
+
+                &:active,
+                &:focus,
+                &:hover {
+                    + .dropdown-menu {
+                        display: none;
+                    }
+                }
             }
 
-            &:nth-child(2) {
-                transition-delay: 0.10s;
-            }
+            .caret {
+                &::before,
+                &::after {
+                    margin-top: -0.4rem;
+                }
 
-            &:nth-child(3) {
-                transition-delay: 0.15s;
-            }
+                &::before {
+                    height: 0.7rem;
+                    right: 0.5rem;
+                }
 
-            &:nth-child(4) {
-                transition-delay: 0.20s;
+                &::after {
+                    right: 0.5rem;
+                    top: 2.6rem;
+                }
             }
+        }
 
-            &:nth-child(5) {
-                transition-delay: 0.25s;
-            }
+        > .expanded-meta-menu .nav-menu-item > a {
+            color: color(cyan);
+            font-size: 1.6rem;
 
-            a {
-                color: color(neutral-lightest);
-                display: inline-block;
-                font-family: 'Lato', Arial, Helvetica, sans-serif;
-                font-size: 1.6rem;
-                margin: 1.25rem 0 0.5rem -1rem;
-                padding: 0.5rem 2rem;
+            &:active,
+            &:focus,
+            &:hover {
+                color: darken(color(cyan), 10%);
+
+                &::after {
+                    background-color: transparent;
+                    box-shadow: none;
+                }
             }
         }
     }
@@ -433,36 +483,40 @@
             }
         }
 
-        .sub-menu {
-            height: 21rem;
-            opacity: 1;
-            width: 30rem;
-        }
-
         span:nth-child(1),
         span:nth-child(3) {
+            margin-top: 0;
+            right: 8vw;
             transform: rotate(45deg);
             z-index: 100;
         }
 
-        span:nth-child(1) {
-            transform: rotate(45deg) translateY(0.2rem) translateX(0.8rem);
-        }
-
         span:nth-child(2) {
-            height: 21rem;
-            overflow: visible;
-            right: -16rem;
-            top: 5.5rem;
-            width: 30rem;
+            background-color: rgba(color(neutral-lightest), 0.95);
+            height: 100vh;
+            pointer-events: none;
+            right: 0;
+            top: 8rem;
+            width: 100vw;
         }
 
         span:nth-child(3) {
-            transform: rotate(-45deg) translateY(-0.7rem) translateX(1.1rem);
+            transform: rotate(-45deg);
         }
 
-        li {
-            margin-right: 12rem;
+        + .menu-wrap {
+            height: 100vh;
+
+            .menus {
+                height: 100vh;
+                left: 0;
+
+                .expanded-menu,
+                .expanded-meta-menu {
+                    height: auto;
+                    width: auto;
+                }
+            }
         }
     }
 }
